Fix footer mobile side margins Fix missing footer side margins on mobile where width is 100%.

--- a/src/module/footer.scss
+++ b/src/module/footer.scss
@@ -11,6 +11,7 @@
 
     @include responsive-block('mobile') {
       text-align: center;
+      margin: 0 1rem;
     }
   }
 }
